Refactor navbar layout and styling

--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -45,106 +45,99 @@
 
 {% block content %}
 <section class="services" id="services">
-  <div class="text-center p-3 pt-4" > 
+  <div class="text-center p-3 pt-4">
     <h3>Our Key Features</h3>
     <p>Take a look at some of our key features</p>
   </div>
-  <div class="serviceFeature">
-    <div><i class="fa-solid fa-heart-pulse"></i>
-      <h6>Cardiology</h6></div>
-    <div>
-      <i class="fa-solid fa-ribbon"></i>
-      <h6>Orthopeadic</h6></div>
-    <div>
-      <i class="fa-solid fa-brain"></i>
-      <h6>Nurologist</h6></div>
-    <div>
-      <i class="fa-solid fa-tablets"></i>
-      <h6>Pharma Pipeline</h6></div>
-    <div>
-      <i class="fa-solid fa-prescription-bottle-medical"></i>
-      <h6>Pharma Team </h6></div>
-    <div>
-      <i class="fa-solid fa-thumbs-up"></i>
-      <h6>High Quality Treatement</h6></div>
-  </div>
   
-</section>
-<div class="about" id="about">
- <div>
-  <img src="{% static 'hospital/images/about-us.jpg' %}" alt="">
- </div>
- <div>
-  <h3>About the Hospital</h3>
-  <p>A hospital is a healthcare institution providing patient treatment with specialized health science and auxiliary healthcare staff and medical equipment.[1] The best-known type of hospital is the general hospital, which typically has an emergency department to treat urgent health problems ranging from fire and accident victims to a sudden illness. A district hospital typically is the major health care facility in its region, with many beds for intensive care and additional beds for patients who need long-term care. Specialized hospitals include trauma centers, rehabilitation hospitals, children's hospitals, seniors' (geriatric) hospitals, and hospitals for dealing with specific medical needs such as psychiatric treatment (see psychiatric hospital) and certain disease categories. Specialized hospitals can help reduce health care costs compared to general hospitals.[2] Hospitals are classified as general, specialty, or government depending on the sources of income received.</p>
- </div>
-</div>
-<section class="exportDoctor">
-<h2 class="text-center p-3">Expert Doctor</h2>
-<div class="swiper">
-  <div class="swiper-wrapper d-flex " id="owl-demo">
-    {% for doc in doctors %}
-      <div class="swiper-slide">
-        <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="{{doc.profile_pic.url}}" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title text-center">{{doc.user.first_name}}</h5>
-           
-          </div>
+  <div class="serviceFeature row justify-content-center">
+    <div class="col-md-4 col-lg-3 mb-4">
+      <div class="card text-center p-3 shadow">
+        <div class="card-body">
+          <i class="fa-solid fa-heart-pulse"></i>
+          <h6 class="card-title">Cardiology</h6>
         </div>
       </div>
-    {% endfor %}
     </div>
     
+    <div class="col-md-4 col-lg-3 mb-4">
+      <div class="card text-center p-3 shadow">
+        <div class="card-body">
+          <i class="fa-solid fa-ribbon"></i>
+          <h6 class="card-title">Orthopaedic</h6>
+        </div>
+      </div>
+    </div>
     
-</div>
+    <div class="col-md-4 col-lg-3 mb-4">
+      <div class="card text-center p-3 shadow">
+        <div class="card-body">
+          <i class="fa-solid fa-brain"></i>
+          <h6 class="card-title">Neurologist</h6>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-4 col-lg-3 mb-4">
+      <div class="card text-center p-3 shadow">
+        <div class="card-body">
+          <i class="fa-solid fa-tablets"></i>
+          <h6 class="card-title">Pharma Pipeline</h6>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-4 col-lg-3 mb-4">
+      <div class="card text-center p-3 shadow">
+        <div class="card-body">
+          <i class="fa-solid fa-prescription-bottle-medical"></i>
+          <h6 class="card-title">Pharma Team</h6>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-4 col-lg-3 mb-4">
+      <div class="card text-center p-3 shadow">
+        <div class="card-body">
+          <i class="fa-solid fa-thumbs-up"></i>
+          <h6 class="card-title">High Quality Treatment</h6>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
-<section class="gallary" id="gallary">
- 
-
- <div class="text-center p-3 pt-4" > 
-    <h3>Our Gallery</h3>
-    <p>View Gallery</p>
-  </div>
-  <div class="gallaryCategory">
-  
-  <button id="AllClickBtn">All</button>
-   <button id="DentalClickBtn">Dental</button>
-   <button id="CardiologyClickBtn">Cardiology</button>
-   <button id="NeurologyClickBtn">Neurology</button>
-   <button id="LaboratyClickBtn">Laboraty</button>
-    
-   <a class="shoeAllImg" href="{% url 'images' %}">Show All images</a>
-  </div>
-  <div class="gallaryImg" id="gallaryImg">
-    
-    
-  </div>
 </section>
 
 <section class="contact" id="contact">
-<h2 class="text-center p-4">Contact Form </h2>
+  <div class="container">
+    <h2 class="text-center p-4">Reach out to us 24/7</h2>
 
-<form action="" method="post">
-  {% csrf_token %}
-  <table class="table">
-    {% for frm in frm_unbound%}
-   <tr>
-    <th>{{frm.label}} : </th>
-    <td  colspan="2">{{frm}}</td>
-   </tr>
-    {% endfor %}
-    <tr>
-      <td></td>
-      <td><button >Send <i class="fa-solid fa-paper-plane "></i></button></td>
-    </tr>
-  </table>
-  
-</form>
-<div class="map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7007.1757831179175!2d77.30518663705388!3d28.582135274144576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce45e3eccb8a7%3A0xd5eb60e62b19e6ba!2sSector%2015%2C%20Noida%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1689432261733!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
+    <div class="row">
+      <!-- Contact Form Card -->
+      <div class="col-md-6">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <form action="" method="post">
+              {% csrf_token %}
+              <div class="mb-3">
+                {% for frm in frm_unbound %}
+                <div class="mb-3">
+                  <label for="{{ frm.id_for_label }}" class="form-label">{{ frm.label }}:</label>
+                  <div>{{ frm }}</div>
+                </div>
+                {% endfor %}
+              </div>
+              <div class="d-grid">
+                <button type="submit" class="btn btn-primary">
+                  Send <i class="fa-solid fa-paper-plane"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
 </section>
+
 {% endblock content %}
 
 {% block script %}
