--- a/templates/hospital/login.html
+++ b/templates/hospital/login.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="d-flex justify-content-around flex-wrap  text-center mt-5">
+
+<!--div class="d-flex justify-content-around flex-wrap  text-center mt-5">
    <a href="{% url 'adminlogin'%}">
     <div class="card" style="width: 18rem;">
         <img src="{% static 'hospital/images/admin.png' %}" class="card-img-top" alt="">
@@ -11,6 +12,7 @@
         <a href="{% url 'adminlogin' %}" class="btn btn-primary ">Login</a></div>
     </div>
    </a>
+--->
     <div class="card" style="width: 18rem;">
         <img src="{% static 'hospital/images/doctor.png' %}" class="card-img-top" alt="">
         <h2>Doctor</h2>
