--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -147,7 +147,7 @@
 
   async function ApiCall() {
     try {
-      let response = await fetch('http://127.0.0.1:8000/gallery/');
+      let response = await fetch('http://127.0.0.1:8000/gallary/');
       let data = await response.json();
       return data;
     } catch (error) {
