--- a/templates/hospital/patientSignup.html
+++ b/templates/hospital/patientSignup.html
@@ -1,40 +1,57 @@
 {% extends 'hospital/base.html' %}
 {% load static %}
+
 {% block style %}
-<style>
-
-</style>
+<!-- Material Kit and Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/@themesberg/material-kit-pro@1.0.0/css/material-kit.min.css" rel="stylesheet" />
 {% endblock style %}
-{% block content %}
-<div class="container p-0 border border-info">
-    <div class="bg-dark p-2  text-white text-center">
-        <h1>Patient Registration Form</h1>
-    </div>
-    <form action="" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="p-4 d-flex flex-wrap gap-3 m-4">
 
-            {% for frm in userform %}
-            <div class="form-floating " style="width: 30rem;">
-                {{frm}}
-                {{frm.label_tag}}
-            {{frm.errors}}
+{% block content %}
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8 col-sm-12">
+            <div class="card shadow-lg border-0 rounded-lg">
+                <div class="card-header bg-dark text-white text-center p-4">
+                    <h2 class="fw-bold">Join Us</h2>
+                    <p class="mb-0">Sign up to access our healthcare services</p>
+                </div>
+                <div class="card-body p-4">
+                    <form action="" method="post" enctype="multipart/form-data" novalidate>
+                        {% csrf_token %}
+
+                        {% for field in userform %}
+                        <div class="form-floating mb-3">
+                            {{ field }}
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            {% if field.errors %}
+                                <div class="text-danger small mt-1">{{ field.errors.as_text }}</div>
+                            {% endif %}
+                        </div>
+                        {% endfor %}
+
+                        {% for field in patientform %}
+                        <div class="form-floating mb-3">
+                            {{ field }}
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            {% if field.errors %}
+                                <div class="text-danger small mt-1">{{ field.errors.as_text }}</div>
+                            {% endif %}
+                        </div>
+                        {% endfor %}
+
+                        <button class="btn btn-primary w-100 shadow-sm" type="submit">
+                            <i class="material-icons align-middle">person_add</i> Sign Up
+                        </button>
+
+                        <div class="text-center mt-3">
+                            <p>Already have an account? <a href="{% url 'patientlogin' %}" class="text-primary">Login here</a></p>
+                        </div>
+                    </form>
+                </div>
             </div>
-            {% endfor %}
-            {% for frm in patientform %}
-        <div class="form-floating " style="width: 30rem;">
-            {{frm}}
-            {{frm.label_tag}}
-        {{frm.errors}}
         </div>
-        {% endfor %}
-        
-            
-            <button class="btn btn-primary w-25 me-4 ">SignUp</button>
-            <p>Already have as Account ? <a href="{% url 'patientlogin' %}">Login here</a></p>
-        
-        </div>
-        
-    </form>
+    </div>
 </div>
 {% endblock content %}
